set defaults for pageObj during .ready call

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -229,6 +229,9 @@ $(document).ready(function(){
    });
 set_up_tabs();
 set_up_sort();
+  pageObj.nolog = 0;
+  pageObj.waittime = 1000;
+
  });
 
 function populate_page_obj(basefile)
