changed name of tRNA.pl to tRNAView.pl

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -133,9 +133,9 @@ function AragornSeq() {
  if ($('.rc_button').is(':hidden')==true){
    rc = 1;}
  if (featid) {
- window.open('tRNA.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&rc='+rc);}
+ window.open('tRNAView.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&rc='+rc);}
  else {
- window.open('tRNA.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc);
+ window.open('tRNAView.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc);
  }
 }
 
