--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -34,7 +34,10 @@ function get_dataset_group_info_chain(i)
 {
  $('#dsg_info'+i).html('<div class=dna_small class=loading class=small>loading. . .</div>'); 
  // ajax_wait("gen_dsg_menu(['args__oid','org_id"+i+"', 'args__num','args__"+i+"'],['dsg_menu"+i+"','genome_message"+i+"']);");
- gen_dsg_menu(['args__oid','org_id'+i, 'args__num','args__'+i],['dsg_menu'+i,'genome_message'+i]);
+ gen_dsg_menu(['args__oid','org_id'+i, 'args__num','args__'+i],['dsg_menu'+i, 'genome_message'+i]);
+ $('#depth_org_1').html($('#org_id1 option:selected').html());
+ $('#depth_org_2').html($('#org_id2 option:selected').html());
+
  ajax_wait("check_previous_analyses();");   
  ajax_wait("get_dataset_group_info(['args__dsgid','dsgid"+i+"','args__org_num','args__"+i+"'],['dsg_info"+i+"','feattype_menu"+i+"','genome_message"+i+"']);");
 }
@@ -53,7 +56,7 @@ if(!pageObj.basename)
   pageObj.nolog=1;
   setTimeout("monitor_log()", 5000);
   
-go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked],[handle_results] );
+go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap'],[handle_results] );
 }
 
 function handle_results(val){
@@ -101,6 +104,7 @@ function update_params(val) {
  ajax_wait(cmd);
  var type;
  $('#blast option:eq('+params[0]+')').attr('selected','selected');
+ $('#merge_algo option:eq('+params[14]+')').attr('selected','selected');
  if (params[12] == 'Distance') 
   {
    $("input[name='dagchainer_type']:nth(1)").attr("checked","checked");
@@ -113,6 +117,8 @@ function update_params(val) {
   }
  display_dagchainer_settings([params[0],params[1],params[2], params[3],params[4]],type);
  $('#c').val(params[13]);
+ merge_select_check();
+ depth_algo_check();
 }
 
 function set_dagchainer_defaults(params, type) {
@@ -237,6 +243,10 @@ $(document).ready(function(){
    $('#assemble_info').toggle();
   }
   $(".options tr:even").addClass("even");
+  merge_select_check();
+ $('#depth_org_1').html($('#org_id1 option:selected').html());
+ $('#depth_org_2').html($('#org_id2 option:selected').html());
+
  });
 
 
@@ -400,6 +410,38 @@ function open_window (url, loc, width, height)
     my_window.resizeTo(width,height);
  }
 
+function merge_select_check () 
+ {
+   var merge_algo = $('#merge_algo').val();
+   if (merge_algo == 0)
+    {
+      $('#merge_algo_options').hide();
+    }
+   else if (merge_algo == 1)
+    {
+      $('#merge_algo_options').show();
+      $('#max_dist_merge').hide();
+    }
+   else
+    {
+      $('#merge_algo_options').show();
+      $('#max_dist_merge').show();
+    }
+ }
+
+function depth_algo_check()
+ {
+   var depth_algo = $('#depth_algo').val();
+   if (depth_algo == 0)
+    {
+      $('#depth_options').hide();
+    }
+   else if (depth_algo == 1)
+    {
+      $('#depth_options').show();
+    }
+ }
+
 </script>
 <table class=backbox><tr><td>
 <DIV id=log_text class="small dna" style="display:none"></DIV>
@@ -452,7 +494,7 @@ function open_window (url, loc, width, height)
        </select>
  <tr>
    <td style="color:#009900">Filter Repetitive Matches:
-   <td>Expected number of hits per sequence <input type=text size=2 id="c" value="<TMPL_VAR NAME="CVALUE">">
+   <td>Expected number of hits per sequence <input type=text size=2 id="c" name="c" value="<TMPL_VAR NAME="CVALUE">">
   <tr valign=top class="odd">
   <td style="color:#009900">DAGChainer Options:
   <td>
@@ -485,15 +527,40 @@ function open_window (url, loc, width, height)
 
 <tr valign=top>
   <td style="color:#009900">Merge Syntenic Blocks:
-  <td>These settings will merge neighboring syntenic blocks.  Set to 0 to turn off.
- <table>
-   <TR>
+  <td>
+   Algorithm: 
+       <select id="merge_algo" name="merge_algo" onchange="merge_select_check()">
+        <OPTION VALUE="0"> --None--
+        <OPTION VALUE="1" <TMPL_VAR NAME="QUOTA_MERGE_SELECT">">Quota Align Merge
+        <OPTION VALUE="2" <TMPL_VAR NAME="DAG_MERGE_SELECT">">Interative DAGChainer
+       </select> <br>
+ <span class=small>These settings will merge neighboring syntenic blocks.  We recommend "Quota Align".</span>
+ <table id="merge_algo_options">
+   <TR id="max_dist_merge">
      <TD>Average distance expected between syntenic blocks (-gm):
      <TD><input type=text size=8 id="gm" value=""><span class=distance_type></span>
    <TR>
      <TD>Maximum distance between two blocks (-Dm): 
      <TD><input type=text size=8 id="Dm" value=""><span class=distance_type></span>
  </TABLE>
+
+<tr valign=top>
+  <td style="color:#009900">Syntenic Depth
+  <td>Algorithm: 
+       <select id="depth_algo" name="depth_algo" onchange="depth_algo_check()">
+        <OPTION VALUE="0"> --None--
+        <OPTION VALUE="1" <TMPL_VAR NAME="QUOTA_MERGE_SELECT">">Quota Align
+       </select> <br>
+       <div id=depth_options style="display:none">
+        Ratio of coverage depth: 
+        <span style="color:#009900" id=depth_org_1></span>
+        <input type=text size=2 id="depth_org_1_ratio" value="1">
+         -to-
+        <input type=text size=2 id="depth_org_2_ratio" value="1">
+        <span style="color:#009900" id=depth_org_2></span><br>
+        Overlap distance: <input type=text size=8 id="depth_overlap" value="40">
+       </div>
+
 
 <tr valign=top>
 <td style="color:#009900">CodeML
