--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -75,27 +75,22 @@
 //     ##################################
 //     ##CACHING SYSTEM USING ALL SERVERS
 //     ##################################
-//        ['http://homer.cnr.berkeley.edu/CoGe/tiler.pl?','http://toxic.berkeley.edu/CoGe/tiler.pl?','http://biocon.berkeley.edu/CoGe/tiler.pl?','http://synteny.cnr.berkeley.edu/CoGe/tiler.pl?'];
-
-//     ##################################
-//     ##CACHING SYSTEM USING ALL SERVERS BUT TOXIC
-//     ##################################
-//        ['http://homer.cnr.berkeley.edu/CoGe/tiler.pl?','http://biocon.berkeley.edu/CoGe/tiler.pl?','http://synteny.cnr.berkeley.edu/CoGe/tiler.pl?'];
-
-//     ##################################
-//     ##CACHING SYSTEM USING ONLY TOXIC
-//     ##################################
-//        ['http://toxic.berkeley.edu/CoGe/tiler.pl?'];
+          [
+//	   'http://toxic.berkeley.edu/CoGe/tiler.pl?',
+	   'http://biocon.berkeley.edu/CoGe/tiler.pl?',
+	   'http://homer.cnr.berkeley.edu/CoGe/tiler.pl?',
+	   'http://synteny.cnr.berkeley.edu/CoGe/tiler.pl?'
+	  ];
 
 //     ##################################
 //     ##NO_CACHING USING ALL SERVERS
 //     ##################################
-//        ['http://homer.cnr.berkeley.edu/CoGe/GenomePNG.pl?','http://toxic.berkeley.edu/CoGe/GenomePNG.pl?','http://biocon.berkeley.edu/CoGe/GenomePNG.pl?','http://synteny.cnr.berkeley.edu/CoGe/GenomePNG.pl?'];
-
-//     ##################################
-//     ##NO CACHING USING ONLY TOXIC
-//     ##################################
-        ['http://toxic.berkeley.edu/CoGe/GenomePNG.pl?'];
+//        [
+// 	    'http://homer.cnr.berkeley.edu/CoGe/GenomePNG.pl?',
+//	    'http://toxic.berkeley.edu/CoGe/GenomePNG.pl?',
+//	    'http://biocon.berkeley.edu/CoGe/GenomePNG.pl?',
+//	    'http://synteny.cnr.berkeley.edu/CoGe/GenomePNG.pl?'
+//	   ];
 
         var org = "<TMPL_VAR NAME=ORG>";
         var ds = '<TMPL_VAR NAME=DS>';
@@ -515,8 +510,14 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
 <div id="short_anno_popup" class="dialog_box" title="Feature Quick Look:"</div>
 <div id='query_popup' class="dialog_box" title="Features:"></div></div>
 <div id="genome_info_popup" class="dialog_box" title="Genome Information"></div>
+
 <div id="maizegdb_popup" class="dialog_box" title="Welcome Maize Genome Researcher">
-   You can identify maize genes with syntenic matches in sorghum by looking for GEvo link glyphs.  There is an example of what these look like in the legend below.<br><br>
+   You can identify maize genes with syntenic matches in sorghum by looking for GEvo link icons:<br>
+<div style="text-align:center"><img src="./picts/GEvo_link_icon.png" style="text-align:center"></div>  <br>If you don't see this above or below your gene, try zooming out and scanning left and right.  There is an example of what these look like in the legend below.<br><br>
+<span class="link" onclick=window.open("/wiki/index.php/Syntenic_gene_sets#Sorghum_and_Maize")>Page where you can download the entire maize-sorghum syntenic gene-set (plus other syntenic data-sets)</span>
+<br>
+<br>
+If this is your first time visiting, you may find these documents helpful:<br>
    <li>For more information on how MaizeGDB and CoGe work together: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/MaizeGDB_and_CoGe')>MaizeGDB-CoGe</span>
    <li>For more information on how Maize-Sorhgum comparative genomics using CoGe: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/Maize_Sorghum_Syntenic_dotplot')>Maize-Sorghum and CoGe</span>
 </div>
