--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -393,13 +393,14 @@ function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2, ksdb)
  var min = $('#zoom_min').val();
  var max = $('#zoom_max').val();
  var am = $('#axis_metric').val();
+ var ct = $('#color_type').val();
     var loc = pageObj.loc;
     if (!loc) {loc=1;}
     loc++;
     pageObj.loc=loc;
     win = window.open ('DisplayMessage.pl', 'win'+loc,'width=400,height=200,scrollbars=1');
     win.focus();
-    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max, 'args__am', 'args__'+am, 'args__bd', 'args__'+$('#box_diags')[0].checked],[open_window]);
+    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max, 'args__am', 'args__'+am, 'args__ct','args__'+ct, 'args__bd', 'args__'+$('#box_diags')[0].checked],[open_window]);
 
 }
 
